--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "sd-capstone",
-  "version": "1.0.0",
-  "description": "LACI Software Development Capstone Project",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JustinLiwag/sd-capstone.git"
-  },
-  "author": "Justin Liwag",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JustinLiwag/sd-capstone/issues"
-  },
-  "homepage": "https://github.com/JustinLiwag/sd-capstone#readme",
-  "dependencies": {
-    "cloudinary": "^1.25.1",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^4.4.1",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.6",
-    "ejs-mate": "^3.0.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "joi": "^17.4.0",
-    "method-override": "^3.0.0",
-    "mongoose": "^5.12.0",
-    "multer": "^1.4.2",
-    "multer-storage-cloudinary": "^4.0.0",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0"
-  }
+	"name": "sd-capstone",
+	"version": "1.0.0",
+	"description": "LACI Software Development Capstone Project",
+	"main": "app.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node app.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/JustinLiwag/sd-capstone.git"
+	},
+	"author": "Justin Liwag",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/JustinLiwag/sd-capstone/issues"
+	},
+	"homepage": "https://github.com/JustinLiwag/sd-capstone#readme",
+	"dependencies": {
+		"cloudinary": "^1.25.1",
+		"connect-flash": "^0.1.1",
+		"connect-mongo": "^4.4.1",
+		"dotenv": "^8.2.0",
+		"ejs": "^3.1.6",
+		"ejs-mate": "^3.0.0",
+		"express": "^4.17.1",
+		"express-session": "^1.17.1",
+		"joi": "^17.4.0",
+		"method-override": "^3.0.0",
+		"mongoose": "^5.12.0",
+		"multer": "^1.4.2",
+		"multer-storage-cloudinary": "^4.0.0",
+		"passport": "^0.4.1",
+		"passport-local": "^1.0.0",
+		"passport-local-mongoose": "^6.1.0"
+	}
 }
